# quickphf

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  LICENSE-ZLIB  README.md
.github/workflows/: check.yml
benchmarks/: Cargo.toml  build.rs
benchmarks/benches/: generate.rs  lookup.rs
benchmarks/src/: lib.rs
quickphf/: Cargo.toml  README.md
quickphf/src/: examples.rs  lib.rs  map.rs  raw_map.rs  set.rs  shared.rs
quickphf_codegen/: CHANGELOG.md  Cargo.toml  README.md
quickphf_codegen/src/: const_instantiable.rs  lib.rs  phf.rs
