[workspace]
resolver = "2"
exclude = ["benchmarks"]

members = ["quickphf", "quickphf_codegen"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = "warn"
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
doc_markdown = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"