[package]
name = "quickphf"
version = "0.1.0"
edition = "2021"
authors = ["Darko Trifunovski <dtrifuno@gmail.com>"]
description = "Runtime code for static data structures based on the PTHash perfect hash function"
readme = "README.md"
repository = "https://github.com/dtrifuno/quickphf"
license = "Zlib OR Apache-2.0 OR MIT"
categories = ["algorithms", "data-structures", "no-std"]
keywords = ["hashing", "mphf", "no_std", "hashmap"]
rust-version = "1.56"

[dependencies]
quickdiv = "0.1.1"
wyhash = "0.5.0"
