[package]
name = "quickphf_codegen"
version = "0.1.1"
edition = "2021"
authors = ["Darko Trifunovski <dtrifuno@gmail.com>"]
description = "Code generator for creating static maps and sets for use with quickphf"
readme = "README.md"
repository = "https://github.com/dtrifuno/quickphf"
license = "Zlib OR Apache-2.0 OR MIT"
categories = ["algorithms", "data-structures"]
keywords = ["hashing", "mphf", "hashmap", "codegen"]
rust-version = "1.56"

[dependencies]
quickdiv = "0.1.1"
quickphf = { version = "0.1.0", path = "../quickphf" }

[lints]
workspace = true

[[bin]]
name = "generate_examples"
